--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: ruby
+sudo: false
 cache: bundler
 script:
   - bundle exec jekyll algolia
@@ -6,4 +7,4 @@ branches:
   only:
     - master
 rvm:
- - 2.4
+ - 2.5
