enabled comments for posts

--- a/_config.yml
+++ b/_config.yml
@@ -196,6 +196,7 @@ defaults:
       read_time: true
       share: true
       related: true
+      comments: true
   # _pages
   - scope:
       path: "_pages"
