--- a/_config.yml
+++ b/_config.yml
@@ -198,6 +198,9 @@ defaults:
       share: true
       related: true
       comments: true
+      toc: true
+      toc_label: "Contents"
+      toc_sticky: true
   # _pages
   - scope:
       path: "_pages"
