--- a/_config.yml
+++ b/_config.yml
@@ -199,7 +199,7 @@ defaults:
       related: true
       comments: true
       toc: true
-      toc_label: "Contents"
+      toc_label: "Content"
       toc_sticky: true
   # _pages
   - scope:
