--- a/.github/workflows/update-chart-docs.yml
+++ b/.github/workflows/update-chart-docs.yml
@@ -9,7 +9,7 @@ jobs:
       - name: automerge
         uses: "moxbot/automerge-action@4536e8847eb62fe2f0ee52c8fa92d17aa97f932f"
         env:
-          GITHUB_TOKEN: "${{ secrets.WWW_PAT }}"
+          GITHUB_TOKEN: ${{ secrets.PAT_ACCESS }}
           MERGE_FILTER_AUTHOR: "moxbot"
           MERGE_LABELS: "update-charts-readme"
           MERGE_COMMIT_MESSAGE: "[Update] Chart docs"
